[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maniamate-graphical-lasso"
version = "0.1.0"
description = "Manim visualizations for Gaussian Graphical Models and Graphical Lasso"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["manim", "graphical-lasso", "gaussian-graphical-models", "visualization", "statistics"]
dependencies = [
    "manim>=0.18.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/anewo-o/maniamate-graphical-lasso"
"Bug Tracker" = "https://github.com/anewo-o/maniamate-graphical-lasso/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
